--- a/slide with cross fade/styles.css
+++ b/slide with cross fade/styles.css
@@ -45,3 +45,16 @@ p { text-align: center; }
 }
 
 /************ Animation Styles ************/
+
+.fade-in-img{
+	animation: fadein 2s;
+}
+
+@keyframes fadein {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
